--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<html>
-<head>
+<html><head>
 <title>Cookie - Let's go fishing!!!</title>
 </head>
 <body style="
     background-repeat: no-repeat;
-    background-image: url(https://avatars2.githubusercontent.com/u/1229271?v=3&s=400);
+    background-image: url(https://avatars2.githubusercontent.com/u/1229271?v=3&amp;s=400);
     background-position: center center;
     background-size: cover;
 ">
@@ -17,6 +16,10 @@
     font-weight: 100;
     line-height: 1em;
 ">Let's go fishing with cookie!</h1>
-<iframe width="0" height="0" src="https://www.youtube.com/embed/9ir_l7qTiZ4?autoplay=1" frameborder="0" allowfullscreen></iframe>
-</body>
-</html>
+<marquee direction="down" width="100%" height="100%" behavior="alternate" style="width: 100%; height: 100%;">
+  <marquee behavior="alternate">
+    <img src="https://pbs.twimg.com/profile_images/1819580238/image.jpg">
+  </marquee>
+</marquee>
+<iframe width="0" height="0" src="https://www.youtube.com/embed/9ir_l7qTiZ4?autoplay=1" frameborder="0" allowfullscreen=""></iframe>
+</body></html>
